--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="container">
         <h1>Machinelearning</h1>
         <h2></h2>
-
+Click <a href="ML1.html">me</a>
         <section id="downloads">
           <a href="https://github.com/havanese/MachineLearning/zipball/master" class="btn">Download as .zip</a>
           <a href="https://github.com/havanese/MachineLearning/tarball/master" class="btn">Download as .tar.gz</a>
